--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
+    "com.unity.burst": "1.1.2",
     "com.unity.collab-proxy": "1.2.16",
+    "com.unity.collections": "0.5.1-preview.11",
+    "com.unity.entities": "0.5.1-preview.11",
     "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.vscode": "1.1.4",
     "com.unity.test-framework": "1.1.9",
