--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,4 @@ sysinfo.txt
 
 # Crashlytics generated file
 crashlytics-build.properties
+Assets/Resources/86EBCEC5-071C-45EB-965B-C34D38D16C2C.txt
